cursive-bootstrap/tests/ui/E-CON/E-CON-0133.cursive
// RUN: compile-fail
// DIAG: E-CON-0133
// SPEC: 8.9
// DESC: wait while key is held

record Counter {
    value: i32
}

procedure wait_with_key(domain: $ExecutionDomain, c: shared Counter) -> () {
    parallel domain {
        let h = spawn { return 42 }
        # c {
            wait h  //~ ERROR E-CON-0133: wait while key held
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
